# rpi-sdk

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  i2s_record.c
include/: rpi.h
include/rpi/: i2s.h
src/: i2s.cpp  internal.hpp
